refactor(ui-kit): use relative imports for files within ui-kit package

--- a/buttons/icon-button/icon-button.mod.css
+++ b/buttons/icon-button/icon-button.mod.css
@@ -1,8 +1,8 @@
-@import 'ui-kit/materials/borders.mod.css';
-@import 'ui-kit/materials/colors.mod.css';
-@import 'ui-kit/materials/shadows.mod.css';
-@import 'ui-kit/materials/spacings.mod.css';
-@import 'ui-kit/materials/transitions.mod.css';
+@import '../../materials/borders.mod.css';
+@import '../../materials/colors.mod.css';
+@import '../../materials/shadows.mod.css';
+@import '../../materials/spacings.mod.css';
+@import '../../materials/transitions.mod.css';
 
 :root {
   --size-small-button: 16px;
