--- a/buttons/secondary-button/secondary-button.mod.css
+++ b/buttons/secondary-button/secondary-button.mod.css
@@ -1,9 +1,9 @@
-@import 'ui-kit/materials/colors.mod.css';
-@import 'ui-kit/materials/shadows.mod.css';
-@import 'ui-kit/materials/spacings.mod.css';
-@import 'ui-kit/materials/transitions.mod.css';
-@import 'ui-kit/materials/borders.mod.css';
-@import 'ui-kit/materials/colors.mod.css';
+@import '../../materials/colors.mod.css';
+@import '../../materials/shadows.mod.css';
+@import '../../materials/spacings.mod.css';
+@import '../../materials/transitions.mod.css';
+@import '../../materials/borders.mod.css';
+@import '../../materials/colors.mod.css';
 
 :root {
   --size-container-small: 16px;
