--- a/date-picker/date-picker-body.mod.css
+++ b/date-picker/date-picker-body.mod.css
@@ -1,8 +1,8 @@
-@import 'ui-kit/materials/borders.mod.css';
-@import 'ui-kit/materials/colors.mod.css';
-@import 'ui-kit/materials/spacings.mod.css';
-@import 'ui-kit/materials/transitions.mod.css';
-@import 'ui-kit/materials/sizes.mod.css';
+@import '../materials/borders.mod.css';
+@import '../materials/colors.mod.css';
+@import '../materials/spacings.mod.css';
+@import '../materials/transitions.mod.css';
+@import '../materials/sizes.mod.css';
 
 .date-input-container {
   align-items: center;
