--- a/table/base-table/base-table.mod.css
+++ b/table/base-table/base-table.mod.css
@@ -1,5 +1,5 @@
-@import 'ui-kit/materials/colors.mod.css';
-@import 'ui-kit/materials/transitions.mod.css';
+@import '../../materials/colors.mod.css';
+@import '../../materials/transitions.mod.css';
 
 :root {
   --shadow-fixed-column: 4px -2px 4px -4px rgba(0, 0, 0, 0.3);
