fix(uikit/radio): improve accessibility

--- a/switches/radio/radio-option.mod.css
+++ b/switches/radio/radio-option.mod.css
@@ -5,11 +5,14 @@
   display: none;
 }
 
-.option {
+.labelWrapper {
   cursor: pointer;
 }
 
-.optionDisabled {
-  color: var(--color-primaryGrey);
+.labelWrapperDisabled {
   cursor: not-allowed;
+}
+
+.textDisabled {
+  color: var(--color-primaryGrey);
 }
