--- a/inputs/text-input/text-input.mod.css
+++ b/inputs/text-input/text-input.mod.css
@@ -1,63 +1,47 @@
 @import '../../materials/colors.mod.css';
-
-.size {
-  width: 100%;
-  height: inherit;
-}
+@import '../../materials/spacings.mod.css';
+@import '../../materials/shadows.mod.css';
 
 .transition-standard {
   transition: all 0.2s ease;
 }
 
-.input-text {
-  composes: transition-standard;
+.input {
+  width: 100%;
+  height: inherit;
+  color: var(--color-greyDark);
   border-radius: 6px;
   border-style: solid;
   border-width: 1px;
-  color: var(--color-greyTundora);
+  border-color: var(--color-greySolid);
   font-weight: 500;
   font-size: 1rem;
   font-family: 'Open Sans', sans-serif !important;
-  padding: 7.5px 10px;
+  padding: var(--spacing-8);
   outline: none;
   box-shadow: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  appearance: none;
 }
 
-.input-form {
-  composes: input-text;
-  background-color: var(--color-coolGrey);
-  border-color: var(--color-white);
-  width: 100%;
-}
+/* States */
 
-.input-secondary {
-  composes: input-form;
-  composes: size;
-}
-
-/*
-.input-primary {
-  composes: input-basic from '@commercetools-local/core/_styles/forms.mod.css';
-  composes: size;
-}
-*/
-
-.invalid-field {
-  /* this needs !important because react-select has a :focus style that
-    stops the border colour being set unless the element is blurred */
-  border-color: var(--color-CTOrange) !important;
+.input:active,
+.input:focus {
+  border-color: var(--color-greenDowny);
 }
 
 .invalid {
-  composes: invalid-field;
-  border: 1px solid;
+  color: var(--color-CTOrange);
+  border-color: var(--color-CTOrange);
 }
 
 .disabled {
   cursor: not-allowed;
-  background-color: var(--color-greyAlabaster);
-  color: var(--color-greyDove);
+  background-color: var(--color-whiteCatskill);
+  border: none;
+  color: var(--color-greyNevada);
   opacity: 1; /* fix for mobile safari */
+
+  /* FIXME: add a color var */
+  box-shadow: var(--shadow-10-first);
 }
