fix(input-fields): adds transition and border-radius as variables

--- a/inputs/numeric-input/numeric-input.mod.css
+++ b/inputs/numeric-input/numeric-input.mod.css
@@ -1,24 +1,23 @@
 @import '../../materials/colors.mod.css';
 @import '../../materials/spacings.mod.css';
 @import '../../materials/shadows.mod.css';
-
-.transition-standard {
-  transition: all 0.2s ease;
-}
+@import '../../materials/borders.mod.css';
+@import '../../materials/transitions.mod.css';
 
 .input {
   width: 100%;
   height: inherit;
-  border-radius: 6px;
+  border-radius: var(--border-radius-6);
   border-style: solid;
   border-width: 1px;
-  font-weight: 500;
-  font-size: 1rem;
-  font-family: 'Open Sans', sans-serif !important;
   padding: var(--spacing-8);
+  transition: var(--transition-standard);
   outline: none;
   box-shadow: none;
   appearance: none;
+  font-weight: 500;
+  font-size: 1rem;
+  font-family: 'Open Sans', sans-serif !important;
 }
 
 /* Tones */
