--- a/switches/toggle/toggle.mod.css
+++ b/switches/toggle/toggle.mod.css
@@ -54,6 +54,26 @@
 }
 
 /* LARGE TOGGLE */
+@keyframes slideRightBig {
+  from {
+    left: 0;
+  }
+
+  to {
+    left: var(--spacing-32);
+  }
+}
+
+@keyframes slideLeftBig {
+  from {
+    left: var(--spacing-32);
+  }
+
+  to {
+    left: 0;
+  }
+}
+
 .container-big {
   position: relative;
   width: var(--big-toggle-width);
@@ -69,23 +89,21 @@
 
 .button-big {
   composes: button;
-  width: var(--big-button-height);
-  height: var(--big-button-height);
+  animation-duration: 0.25s;
+  animation-name: slideLeftBig;
 }
 
 .button-checked-big {
   composes: button-big;
   left: var(--spacing-32);
+  animation-duration: 0.25s;
+  animation-name: slideRightBig;
 }
 
 .button-hover-big {
   composes: button-big;
-  top: calc(
-    (var(--big-hover-button-height) - var(--big-button-height)) / -2
-  );
-  left: calc(
-    (var(--big-hover-button-width) - var(--big-button-width)) / -2
-  );
+  top: calc((var(--big-hover-button-height) - var(--big-button-height)) / -2);
+  left: calc((var(--big-hover-button-width) - var(--big-button-width)) / -2);
   width: var(--big-hover-button-width);
   height: var(--big-hover-button-height);
 }
@@ -96,6 +114,25 @@
 }
 
 /* SMALL TOGGLE */
+@keyframes slideRightSmall {
+  from {
+    left: 0;
+  }
+
+  to {
+    left: var(--spacing-16);
+  }
+}
+
+@keyframes slideLeftSmall {
+  from {
+    left: var(--spacing-16);
+  }
+
+  to {
+    left: 0;
+  }
+}
 .container-small {
   position: relative;
   width: var(--small-toggle-width);
@@ -111,20 +148,24 @@
 
 .button-small {
   composes: button;
+  animation-duration: 0.25s;
+  animation-name: slideLeftSmall;
 }
 
 .button-checked-small {
   composes: button-small;
   left: var(--spacing-16);
+  animation-duration: 0.25s;
+  animation-name: slideRightSmall;
 }
 
 .button-hover-small {
   composes: button-small;
   top: calc(
-    (var(--small-hover-button-height) - var(--small-button-height)) / -2
+     (var(--small-hover-button-height) - var(--small-button-height)) / -2
   );
   left: calc(
-    (var(--small-hover-button-width) - var(--small-button-width)) / -2
+     (var(--small-hover-button-width) - var(--small-button-width)) / -2
   );
 }
 
