style(inputs): removes important

--- a/inputs/numeric-input/numeric-input.mod.css
+++ b/inputs/numeric-input/numeric-input.mod.css
@@ -17,7 +17,7 @@
   appearance: none;
   font-weight: 500;
   font-size: 1rem;
-  font-family: 'Open Sans', sans-serif !important;
+  font-family: 'Open Sans', sans-serif;
 }
 
 /* Tones */
