--- a/inputs/text-input/text-input.mod.css
+++ b/inputs/text-input/text-input.mod.css
@@ -62,6 +62,7 @@
   color: var(--color-primaryGrey);
   border-color: var(--color-primaryGrey);
   background-color: var(--color-white);
+  pointer-events: none;
 }
 
 .readonly,
