fix(input-text): adds styles to make isDisabled state looks better

--- a/inputs/numeric-input/numeric-input.mod.css
+++ b/inputs/numeric-input/numeric-input.mod.css
@@ -50,7 +50,8 @@
   color: var(--color-greyDark);
 }
 
-.disabled {
+.disabled,
+.disabled:active {
   cursor: not-allowed;
   background-color: var(--color-whiteCatskill);
   border-color: var(--color-greyMischka);
