--- a/switches/toggle/toggle.mod.css
+++ b/switches/toggle/toggle.mod.css
@@ -1,22 +1,19 @@
 @import '../../materials/spacings.mod.css';
 @import '../../materials/colors.mod.css';
 @import '../../materials/sizes.mod.css';
+@import '../../materials/transitions.mod.css';
 
 :root {
   --big-toggle-height: var(--standard-input-height);
   --big-toggle-width: calc(var(--big-toggle-height) * 2);
   --big-button-height: var(--big-toggle-height);
   --big-button-width: var(--big-toggle-height);
-  --big-hover-button-height: 52px;
-  --big-hover-button-width: 52px;
   --big-bar-height: 24px;
   --big-bar-width: 64px;
   --small-toggle-height: 16px;
   --small-toggle-width: calc(var(--small-toggle-height) * 2);
   --small-button-height: var(--small-toggle-height);
   --small-button-width: var(--small-toggle-height);
-  --small-hover-button-height: 26px;
-  --small-hover-button-width: 26px;
   --small-bar-height: 12px;
   --small-bar-width: 32px;
 }
@@ -41,135 +38,108 @@
   width: calc(var(--big-bar-width) * 2);
 }
 
-.button {
-  top: -1px; /* The position of the button was off for some reason */
-  left: -1px;
-  position: absolute;
-  z-index: 1;
-}
-
-.bar {
-  position: absolute;
-  left: 0;
-}
-
-/* LARGE TOGGLE */
-@keyframes slideRightBig {
-  from {
-    left: 0;
-  }
-
-  to {
-    left: var(--spacing-32);
-  }
-}
-
-@keyframes slideLeftBig {
-  from {
-    left: var(--spacing-32);
-  }
-
-  to {
-    left: 0;
-  }
-}
-
-.container-big {
+/* --- CONTAINER --- */
+.toggle-container {
   position: relative;
-  width: var(--big-toggle-width);
-  height: var(--big-toggle-height);
 }
 
-.bar-big {
-  composes: bar;
-  top: var(--spacing-4);
-  width: var(--big-bar-width);
-  height: var(--big-bar-height);
-}
-
-.button-big {
-  composes: button;
-  animation-duration: 0.25s;
-  animation-name: slideLeftBig;
-}
-
-.button-checked-big {
-  composes: button-big;
-  left: var(--spacing-32);
-  animation-duration: 0.25s;
-  animation-name: slideRightBig;
-}
-
-.button-hover-big {
-  composes: button-big;
-  top: calc((var(--big-hover-button-height) - var(--big-button-height)) / -2);
-  left: calc((var(--big-hover-button-width) - var(--big-button-width)) / -2);
-  width: var(--big-hover-button-width);
-  height: var(--big-hover-button-height);
-}
-
-.button-hover-checked-big {
-  composes: button-hover-big;
-  left: 22px;
-}
-
-/* SMALL TOGGLE */
-@keyframes slideRightSmall {
-  from {
-    left: 0;
-  }
-
-  to {
-    left: var(--spacing-16);
-  }
-}
-
-@keyframes slideLeftSmall {
-  from {
-    left: var(--spacing-16);
-  }
-
-  to {
-    left: 0;
-  }
-}
-.container-small {
-  position: relative;
+.toggle-container-small {
+  composes: toggle-container;
   width: var(--small-toggle-width);
   height: var(--small-toggle-height);
 }
 
-.bar-small {
-  composes: bar;
+.toggle-container-big {
+  composes: toggle-container;
+  width: var(--big-toggle-width);
+  height: var(--big-toggle-height);
+}
+
+/* BAR */
+.toggle-bar {
+  position: absolute;
+  left: 0;
+}
+
+.toggle-bar-small {
+  composes: toggle-bar;
   top: calc(var(--spacing-4) / 2);
   width: var(--small-bar-width);
   height: var(--small-bar-height);
 }
 
-.button-small {
-  composes: button;
-  animation-duration: 0.25s;
-  animation-name: slideLeftSmall;
+.toggle-bar-big {
+  composes: toggle-bar;
+  top: var(--spacing-4);
+  width: var(--big-bar-width);
+  height: var(--big-bar-height);
 }
 
-.button-checked-small {
-  composes: button-small;
-  left: var(--spacing-16);
-  animation-duration: 0.25s;
-  animation-name: slideRightSmall;
+/* bar - active */
+.toggle-bar.active rect {
+  fill: #87d8c8;
 }
 
-.button-hover-small {
-  composes: button-small;
-  top: calc(
-     (var(--small-hover-button-height) - var(--small-button-height)) / -2
-  );
-  left: calc(
-     (var(--small-hover-button-width) - var(--small-button-width)) / -2
-  );
+/* bar - disabled */
+.toggle-bar.disabled rect {
+  fill: #eaeaea;
 }
 
-.button-hover-checked-small {
-  composes: button-hover-small;
-  left: 11px;
+.toggle-bar.active.disabled rect {
+  fill: #87d8c8;
+  opacity: 0.5;
+}
+
+/* BUTTON */
+.toggle-button {
+  top: -1px; /* The position of the button was off for some reason */
+  left: -1px;
+  position: absolute;
+  z-index: 1;
+  transition: var(--transition-standard);
+}
+
+.toggle-button :global(.bt-fill) {
+  transition: var(--transition-standard);
+}
+
+.toggle-button-small {
+  composes: toggle-button;
+  width: var(--small-button-width);
+  height: var(--small-button-height);
+}
+
+.toggle-button-big {
+  composes: toggle-button;
+  width: var(--big-button-width);
+  height: var(--big-button-height);
+}
+
+/* button - active */
+.toggle-button.active {
+  /* The extra 7% shifts the button to the right by about 2px for big and 1px for small */
+  transform: translateX(107%);
+}
+
+.toggle-button.active :global(.bt-fill) {
+  fill: #00b6a1;
+}
+
+/* button - disabled */
+.toggle-button.disabled :global(.bt-fill) {
+  fill: #f9fafc;
+}
+
+.toggle-button.disabled.active :global(.bt-fill) {
+  fill: #87d8c8;
+}
+
+/* button - hover */
+.toggle-button:hover {
+  filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.24))
+    drop-shadow(0 1px 2px rgba(0, 0, 0, 0.12));
+}
+
+.toggle-button:hover.disabled {
+  filter: none;
 }
