--- a/materials/shadows.mod.css
+++ b/materials/shadows.mod.css
@@ -1,4 +1,14 @@
 :root {
+  /* shadow variables from the Toggle switch element
+    These are to be used with the `filter: drop-shadow` declaration.
+  */
+  --drop-shadow-1-first: 0 1px 0.5px rgba(0, 0, 0, 0.24);
+  --drop-shadow-1-second: 0 -1px 0.75px rgba(0, 0, 0, 0.12);
+  --drop-shadow-2: 0 0 1px rgba(0, 0, 0, 0.25);
+  --drop-shadow-3: 0 0 0.5px rgba(0, 0, 0, 0.15);
+  --drop-shadow-4: 0 0 0.5px rgba(0, 0, 0, 0.1);
+  --drop-shadow-5-first: 0 2px 2px rgba(0, 0, 0, 0.24);
+  --drop-shadow-5-second: 0 1px 4.75px rgba(0, 0, 0, 0.12);
   --shadow-1-first: 0 1px 3px rgba(0, 0, 0, 0.12);
   --shadow-1-second: 0 1px 2px rgba(0, 0, 0, 0.24);
   --shadow-2-first: 0 3px 6px rgba(0, 0, 0, 0.16);
