--- a/switches/toggle/toggle.mod.css
+++ b/switches/toggle/toggle.mod.css
@@ -2,6 +2,7 @@
 @import '../../materials/colors.mod.css';
 @import '../../materials/sizes.mod.css';
 @import '../../materials/transitions.mod.css';
+@import '../../materials/shadows.mod.css';
 
 :root {
   --big-toggle-height: var(--standard-input-height);
@@ -82,8 +83,8 @@
   left: -1px;
   position: absolute;
   z-index: 1;
-  filter: drop-shadow(0 1px 0.5px rgba(0, 0, 0, 0.24))
-    drop-shadow(0 -1px 0.75px rgba(0, 0, 0, 0.12));
+  filter: drop-shadow(var(--drop-shadow-1-first))
+    drop-shadow(var(--drop-shadow-1-second));
   transition: var(--transition-standard);
 }
 
@@ -107,7 +108,7 @@
 .toggle-button.active {
   /* The extra 7% shifts the button to the right by about 2px for big and 1px for small */
   transform: translateX(107%);
-  filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(var(--drop-shadow-2));
 }
 
 .toggle-button.active :global(.bt-fill) {
@@ -116,7 +117,7 @@
 
 /* button - disabled */
 .toggle-button.disabled {
-  filter: drop-shadow(0 0 0.5px rgba(0, 0, 0, 0.15));
+  filter: drop-shadow(var(--drop-shadow-3));
 }
 
 .toggle-button.disabled :global(.bt-fill) {
@@ -124,7 +125,7 @@
 }
 
 .toggle-button.disabled.active {
-  filter: drop-shadow(0 0 0.5px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(var(--drop-shadow-4));
 }
 
 .toggle-button.disabled.active :global(.bt-fill) {
@@ -133,8 +134,8 @@
 
 /* button - hover */
 .toggle-button:hover {
-  filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.24))
-    drop-shadow(0 1px 4.75px rgba(0, 0, 0, 0.12));
+  filter: drop-shadow(var(--drop-shadow-5-first))
+    drop-shadow(var(--drop-shadow-5-second));
 }
 
 .toggle-button:hover.disabled {
