fix(uikit/toggle): to have label and proper a11y on label

--- a/switches/toggle/toggle.mod.css
+++ b/switches/toggle/toggle.mod.css
@@ -23,6 +23,14 @@
   display: none;
 }
 
+.labelWrapper {
+  cursor: pointer;
+}
+
+.labelWrapperDisabled {
+  cursor: not-allowed;
+}
+
 /* --- CONTAINER --- */
 .toggle-container {
   position: relative;
