--- a/switches/toggle/toggle.mod.css
+++ b/switches/toggle/toggle.mod.css
@@ -3,20 +3,14 @@
 @import '../../materials/sizes.mod.css';
 @import '../../materials/transitions.mod.css';
 @import '../../materials/shadows.mod.css';
+@import './toggle-bar.mod.css';
+@import './toggle-button.mod.css';
 
 :root {
   --big-toggle-height: var(--standard-input-height);
   --big-toggle-width: calc(var(--big-toggle-height) * 2);
-  --big-button-height: var(--big-toggle-height);
-  --big-button-width: var(--big-toggle-height);
-  --big-bar-height: 24px;
-  --big-bar-width: 64px;
   --small-toggle-height: calc(var(--big-toggle-height) / 2);
   --small-toggle-width: calc(var(--small-toggle-height) * 2);
-  --small-button-height: var(--small-toggle-height);
-  --small-button-width: var(--small-toggle-height);
-  --small-bar-height: 12px;
-  --small-bar-width: 32px;
 }
 
 .inputWrapper {
@@ -46,106 +40,4 @@
   composes: toggle-container;
   width: var(--big-toggle-width);
   height: var(--big-toggle-height);
-}
-
-/* BAR */
-.toggle-bar {
-  position: absolute;
-  left: 0;
-}
-
-.toggle-bar-small {
-  composes: toggle-bar;
-  top: calc(var(--spacing-4) / 2);
-  width: var(--small-bar-width);
-  height: var(--small-bar-height);
-}
-
-.toggle-bar-big {
-  composes: toggle-bar;
-  top: var(--spacing-4);
-  width: var(--big-bar-width);
-  height: var(--big-bar-height);
-}
-
-/* bar - active */
-.toggle-bar.active rect {
-  fill: var(--color-greenLight);
-}
-
-/* bar - disabled */
-.toggle-bar.disabled rect {
-  fill: var(--color-greyGallery);
-}
-
-.toggle-bar.active.disabled rect {
-  fill: var(--color-greenLight);
-  opacity: 0.5;
-}
-
-/* BUTTON */
-
-/* button - base styles */
-.toggle-button {
-  top: -1px; /* The position of the button was off for some reason */
-  left: -1px;
-  position: absolute;
-  z-index: 1;
-  filter: drop-shadow(var(--drop-shadow-1-first))
-    drop-shadow(var(--drop-shadow-1-second));
-  transition: var(--transition-standard);
-}
-
-.toggle-button :global(.bt-fill) {
-  transition: var(--transition-standard);
-}
-
-.toggle-button-small {
-  composes: toggle-button;
-  width: var(--small-button-width);
-  height: var(--small-button-height);
-}
-
-.toggle-button-big {
-  composes: toggle-button;
-  width: var(--big-button-width);
-  height: var(--big-button-height);
-}
-
-/* button - active */
-.toggle-button.active {
-  /* The extra 7% shifts the button to the right by about 2px for big and 1px for small */
-  transform: translateX(107%);
-  filter: drop-shadow(var(--drop-shadow-2));
-}
-
-.toggle-button.active :global(.bt-fill) {
-  fill: var(--color-buttonPrimary);
-}
-
-/* button - disabled */
-.toggle-button.disabled {
-  filter: drop-shadow(var(--drop-shadow-3));
-}
-
-.toggle-button.disabled :global(.bt-fill) {
-  fill: var(--color-coolGrey);
-}
-
-.toggle-button.disabled.active {
-  filter: drop-shadow(var(--drop-shadow-4));
-}
-
-.toggle-button.disabled.active :global(.bt-fill) {
-  fill: var(--color-greenLight);
-}
-
-/* button - hover */
-.toggle-button:hover {
-  filter: drop-shadow(var(--drop-shadow-5-first))
-    drop-shadow(var(--drop-shadow-5-second));
-}
-
-.toggle-button:hover.disabled {
-  filter: none;
 }
