feat(ppl/sorting): add correct arrow for sorting to table-header

--- a/table/sortable-header/sortable-header.mod.css
+++ b/table/sortable-header/sortable-header.mod.css
@@ -2,8 +2,20 @@
   display: flex;
 }
 
+.arrow {
+  display: none;
+}
+
+.active .arrow {
+  display: inherit;
+}
+
 .container:hover {
   cursor: pointer;
+}
+
+.container:hover .arrow {
+  display: inherit;
 }
 
 .label {
