fix(ppl/sorting): fix arrow not getting cut-off

--- a/table/sortable-header/sortable-header.mod.css
+++ b/table/sortable-header/sortable-header.mod.css
@@ -3,12 +3,12 @@
 }
 
 .arrow {
-  display: none;
+  visibility: hidden; /* use visibility so react-virtualized can account for arrow-width on calcs */
   pointer-events: none; /* Do not unhover when on the icon */
 }
 
 .active .arrow {
-  display: inherit;
+  visibility: visible;
 }
 
 .container:hover {
@@ -16,7 +16,7 @@
 }
 
 .container:hover .arrow {
-  display: inherit;
+  visibility: visible;
 }
 
 .label {
