--- a/inputs/number-input/number-input.mod.css
+++ b/inputs/number-input/number-input.mod.css
@@ -21,7 +21,7 @@
   border-radius: var(--border-radius-6);
   border-style: solid;
   border-width: 1px;
-  padding: var(--spacing-8);
+  padding: 0 var(--spacing-8);
   transition: var(--transition-standard);
   outline: none;
   box-shadow: none;
