feat(menu-item-divider): adds menu item divider for settings plugin
adds menu item divider for settings plugin

--- a/materials/colors.mod.css
+++ b/materials/colors.mod.css
@@ -11,6 +11,7 @@ colors. */
   --color-blueDodger: #0d9df8;
   --color-blueSolitude: #eaf7fe;
   --color-purple: #bd72ff;
+  --color-bluePolice: #285a6b;
 
   /* Reds */
   --color-red: #e60050;
