--- a/inputs/text-input/text-input.mod.css
+++ b/inputs/text-input/text-input.mod.css
@@ -3,12 +3,37 @@
 @import '../../materials/shadows.mod.css';
 @import '../../materials/borders.mod.css';
 @import '../../materials/transitions.mod.css';
+@import '../../materials/sizes.mod.css';
 
 :root {
   --height-input: 32px;
 }
 
 /* Base */
+
+.constraintScale {
+  width: var(--constraint-scale);
+}
+
+.constraintXs {
+  max-width: var(--constraint-xs);
+}
+
+.constraintS {
+  max-width: var(--constraint-s);
+}
+
+.constraintM {
+  max-width: var(--constraint-m);
+}
+
+.constraintL {
+  max-width: var(--constraint-l);
+}
+
+.constraintXl {
+  max-width: var(--constraint-xl);
+}
 
 .container {
   width: 100%;
