--- a/inputs/localized-text-input/localized-text-input.mod.css
+++ b/inputs/localized-text-input/localized-text-input.mod.css
@@ -42,15 +42,14 @@
 }
 
 .languageLabel {
-  /* avid wrapping label onto new lines */
+  /* avoid wrapping label onto new lines */
   flex: 1 0 auto;
   height: var(--height-input);
   line-height: var(--height-input);
-  background-color: #f9f9f9;
-  border-radius: var(--border-radius-6);
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
-  border: 1px solid #ccc;
+  background-color: var(--color-greyAlabaster);
+  border-top-left-radius: var(--border-radius-6);
+  border-bottom-left-radius: var(--border-radius-6);
+  border: var(--border-radius-1) solid var(--color-primaryGrey);
   border-right: 0;
   padding: 0 var(--spacing-8);
   transition: var(--transition-standard);
@@ -61,11 +60,10 @@
 .input {
   width: 100%;
   height: var(--height-input);
-  border-radius: var(--border-radius-6);
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  border-top-right-radius: var(--border-radius-6);
+  border-bottom-right-radius: var(--border-radius-6);
   border-style: solid;
-  border-width: 1px;
+  border-width: var(--border-radius-1);
   padding: 0 var(--spacing-8);
   transition: var(--transition-standard);
   outline: none;
