refactor(uikit): change greyNevada to new tone

--- a/materials/colors.mod.css
+++ b/materials/colors.mod.css
@@ -59,7 +59,7 @@ colors. */
   --color-greyGallery: #eaeaea;
   --color-greyAlto: #d8d8d8;
   --color-greyZircon: #dde1e2;
-  --color-greyNevada: #657479;
+  --color-greyNevada: #65747d;
   --color-greySolid: #afafaf;
 
   /* Faded version of main colors */
