--- a/tag/tag.mod.css
+++ b/tag/tag.mod.css
@@ -20,7 +20,7 @@
 }
 
 .wrapperTypeWarning {
-  background: var(--color-bananaMania);
+  background: var(--color-fadedOrange20);
 }
 
 .disabledWrapper {
