--- a/buttons/icon-button/icon-button.mod.css
+++ b/buttons/icon-button/icon-button.mod.css
@@ -164,7 +164,7 @@
 }
 
 .active.disabled.theme-green {
-  background-color: var(--color-greenSulu);
+  background-color: var(--color-fadedGreen30);
   color: var(--color-white);
   box-shadow: var(--shadow-9-first), var(--shadow-9-second),
     var(--shadow-9-third);
@@ -179,5 +179,5 @@
 }
 
 .active.theme-green:hover {
-  background-color: var(--color-greenSulu);
+  background-color: var(--color-fadedGreen30);
 }
