--- a/buttons/icon-button/icon-button.mod.css
+++ b/buttons/icon-button/icon-button.mod.css
@@ -113,7 +113,7 @@
 .active:hover {
   box-shadow: var(--shadow-9-first), var(--shadow-9-second),
     var(--shadow-9-third);
-  background-color: var(--color-greyLight);
+  background-color: var(--color-whiteSnow);
 }
 
 /*
