--- a/dropdowns/primary-action-dropdown/primary-actions-dropdown.mod.css
+++ b/dropdowns/primary-action-dropdown/primary-actions-dropdown.mod.css
@@ -49,7 +49,7 @@
 .disabledPrimaryAction,
 .disabledDropdownHeadChevron {
   box-shadow: none;
-  background-color: var(--color-greyZircon);
+  background-color: var(--color-whitePorcelain);
   color: var(--color-primaryGrey);
 }
 
