--- a/materials/colors.mod.css
+++ b/materials/colors.mod.css
@@ -28,7 +28,7 @@ colors. */
   --color-white: #fff;
   --color-whiteAlabaster: #fafafa;
   --color-whiteCatskill: #f9fafc;
-  --color-whitePorcelain: #ecf0f1;
+  --color-whitePorcelain: #eff2f6;
   --color-whiteSnow: #f2f2f2;
 
   /* Grays */
@@ -46,7 +46,6 @@ colors. */
   --color-greyGallery: #eee;
   --color-greyGallery: #eaeaea;
   --color-greyAlto: #d8d8d8;
-  --color-greyZircon: #dde1e2;
   --color-greyNevada: #65747d;
   --color-greySolid: #afafaf;
 
