--- a/buttons/icon-button/icon-button.mod.css
+++ b/buttons/icon-button/icon-button.mod.css
@@ -85,7 +85,7 @@
 /* Disabled button */
 
 .disabled {
-  background-color: var(--color-greyZircon);
+  background-color: var(--color-whitePorcelain);
   color: var(--color-greyNevada);
   box-shadow: none;
 }
@@ -123,7 +123,7 @@
 /* Disabled-Active button */
 
 .disabled.theme-blue:hover {
-  background-color: var(--color-greyZircon);
+  background-color: var(--color-whitePorcelain);
 }
 
 /* When the button is active (isToggled: true) and somehow is disabled
@@ -160,7 +160,7 @@
   receive any actions */
 
 .disabled.theme-green:hover {
-  background-color: var(--color-greyZircon);
+  background-color: var(--color-whitePorcelain);
 }
 
 .active.disabled.theme-green {
