--- a/inputs/localized-text-input/localized-text-input.mod.css
+++ b/inputs/localized-text-input/localized-text-input.mod.css
@@ -90,7 +90,7 @@
 .pristine {
   composes: input;
   border-color: var(--color-greySolid);
-  color: var(--color-greyDark);
+  color: var(--color-black);
 }
 
 .warning {
@@ -126,5 +126,5 @@
 .pristine:active,
 .pristine:focus {
   border-color: var(--color-greenDowny);
-  color: var(--color-greyDark);
+  color: var(--color-black);
 }
