--- a/materials/colors.mod.css
+++ b/materials/colors.mod.css
@@ -51,7 +51,7 @@ colors. */
   /* Faded version of main colors */
   --color-fadedOrange20: color(var(--color-CTOrange) alpha(20%));
   --color-fadedBlue20: color(var(--color-blue) alpha(20%));
-  --color-fadedBlueNavy: color(var(--color-blueNavy) alpha(30%));
+  --color-fadedBlack25: color(var(--color-black) alpha(25%));
   --color-fadedbluePelorous20: color(var(--color-blueNavy) alpha(20%));
   --color-fadedbluePelorous40: color(var(--color-darkGreen) alpha(40%));
   --color-fadedbluePelorous90: color(var(--color-whiteCatskill) alpha(10%));
