--- a/materials/colors.mod.css
+++ b/materials/colors.mod.css
@@ -52,8 +52,8 @@ colors. */
   --color-fadedOrange20: color(var(--color-CTOrange) alpha(20%));
   --color-fadedBlue20: color(var(--color-blue) alpha(20%));
   --color-fadedBlack25: color(var(--color-black) alpha(25%));
-  --color-fadedbluePelorous20: color(var(--color-blueNavy) alpha(20%));
   --color-fadedbluePelorous40: color(var(--color-darkGreen) alpha(40%));
+  --color-fadedBlueNavy20: color(var(--color-blueNavy) alpha(20%));
   --color-fadedbluePelorous90: color(var(--color-whiteCatskill) alpha(10%));
   --color-fadedGreen30: color(var(--color-green) alpha(30%));
   --color-fadedGreenLight10: color(var(--color-greenLight) alpha(10%));
