--- a/buttons/primary-button/primary-button.mod.css
+++ b/buttons/primary-button/primary-button.mod.css
@@ -64,7 +64,7 @@
 
 /** urgent tone */
 .button-tone-urgent .button {
-  background-color: var(--color-CTOrange);
+  background-color: var(--color-orange);
 }
 
 .button-tone-urgent .active:hover,
@@ -74,7 +74,7 @@
 
 .button-tone-urgent .active,
 .button-tone-urgent .button:active {
-  background-color: var(--color-CTOrange);
+  background-color: var(--color-orange);
 }
 
 /**
