--- a/inputs/number-input/number-input.mod.css
+++ b/inputs/number-input/number-input.mod.css
@@ -77,8 +77,8 @@
 
 .warning {
   composes: input;
-  color: var(--color-CTOrange);
-  border-color: var(--color-CTOrange);
+  color: var(--color-orange);
+  border-color: var(--color-orange);
 }
 
 .error {
