--- a/tag/tag.mod.css
+++ b/tag/tag.mod.css
@@ -53,7 +53,7 @@
 }
 
 .contentWrapperWarning {
-  border-color: var(--color-CTYellow);
+  border-color: var(--color-orange);
 }
 
 .clickableContentWrapper {
@@ -69,7 +69,7 @@
 }
 
 .clickableContentWrapperWarning:hover {
-  border-color: var(--color-CTYellow);
+  border-color: var(--color-orange);
   border-right: 1px solid var(--color-secondaryGrey);
 }
 
@@ -78,7 +78,7 @@
 }
 
 .clickableRemovableContentWrapperWarning {
-  border-right: 1px solid var(--color-CTYellow);
+  border-right: 1px solid var(--color-orange);
 }
 
 .disabledContent {
@@ -106,11 +106,11 @@
 }
 
 .removeWrapperTypeWarning {
-  border-color: var(--color-CTYellow);
+  border-color: var(--color-orange);
 }
 
 .removeWrapperTypeWarning:hover {
-  background: var(--color-CTYellow);
+  background: var(--color-orange);
 }
 
 .disabledRemove:hover {
