--- a/date-picker/date-picker.mod.css
+++ b/date-picker/date-picker.mod.css
@@ -1,3 +1,24 @@
-.scale {
-  flex-grow: 1;
+@import '../materials/sizes.mod.css';
+
+.container {
+  width: 100%;
+}
+
+.constraintScale {
+  width: var(--constraint-scale);
+}
+.constraintXs {
+  max-width: var(--constraint-xs);
+}
+.constraintS {
+  max-width: var(--constraint-s);
+}
+.constraintM {
+  max-width: var(--constraint-m);
+}
+.constraintL {
+  max-width: var(--constraint-l);
+}
+.constraintXl {
+  max-width: var(--constraint-xl);
 }
