--- a/materials/colors.mod.css
+++ b/materials/colors.mod.css
@@ -51,6 +51,7 @@ colors. */
   --color-fadedBlue20: color(var(--color-blue) alpha(20%));
   --color-fadedBlack25: color(var(--color-black) alpha(25%));
   --color-fadedBlueNavy20: color(var(--color-blueNavy) alpha(20%));
+  --color-fadedWhite20: color(var(--color-white) alpha(20%));
   --color-fadedWhiteCatskill90: color(var(--color-whiteCatskill) alpha(90%));
   --color-fadedPrimaryGreen20: color(var(--color-primaryGreen) alpha(20%));
   --color-fadedGreen30: color(var(--color-green) alpha(30%));
