--- a/inputs/money-numeric-input/money-numeric-input.mod.css
+++ b/inputs/money-numeric-input/money-numeric-input.mod.css
@@ -1,41 +1,42 @@
 @import '../../materials/colors.mod.css';
+@import '../../materials/spacings.mod.css';
 @import '../../materials/borders.mod.css';
 @import '../../materials/transitions.mod.css';
 
-.input-text {
-  transition: var(--transition-standard);
-  border-radius: var(--border-radius-6);
-  border-style: solid;
-  border-width: 1px;
-  color: var(--color-greyTundora);
-  font-weight: 500;
-  font-size: 1rem;
-  font-family: 'Open Sans', sans-serif !important;
-  padding: 7.5px 10px;
-  outline: none;
-  box-shadow: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+:root {
+  --height-input: 32px;
 }
 
 .input {
-  composes: input-text;
-  background-color: var(--color-coolGrey);
-  border-color: var(--color-white);
   width: 100%;
+  height: var(--height-input);
+  border-radius: var(--border-radius-6);
+  border-style: solid;
+  border-width: 1px;
+  padding: 0 var(--spacing-8);
+  transition: var(--transition-standard);
+  outline: none;
+  box-shadow: none;
+  appearance: none;
+  font-weight: 500;
+  font-size: 1rem;
+  font-family: 'Open Sans', sans-serif;
+}
+
+/* Tones */
+
+.pristine {
+  composes: input;
+  border-color: var(--color-greySolid);
+  color: var(--color-black);
 }
 
 .disabled {
   composes: input;
-  background: none;
-  border: 1px solid var(--color-greyMischka);
-  color: var(--color-grey);
-  word-break: break-all;
-  hyphens: auto; /* still not supported on Chrome */
-
-  /* same height as input to avoid jumping ui elements */
-  display: flex;
-  align-items: center;
+  cursor: not-allowed;
+  background-color: var(--color-whiteCatskill);
+  border-color: var(--color-greyMischka);
+  color: var(--color-greyNevada);
   opacity: 1; /* fix for mobile safari */
 }
 
@@ -49,4 +50,12 @@
   composes: input;
   color: var(--color-red);
   border-color: var(--color-red);
+}
+
+/* States */
+
+.pristine:active,
+.pristine:focus {
+  border-color: var(--color-greenDowny);
+  color: var(--color-black);
 }
