--- a/inputs/money-numeric-input/money-numeric-input.mod.css
+++ b/inputs/money-numeric-input/money-numeric-input.mod.css
@@ -1,18 +1,30 @@
-@import '../../materials/colors.mod.css';
-@import '../../materials/spacings.mod.css';
 @import '../../materials/borders.mod.css';
+@import '../../materials/colors.mod.css';
+@import '../../materials/shadows.mod.css';
+@import '../../materials/sizes.mod.css';
+@import '../../materials/spacings.mod.css';
 @import '../../materials/transitions.mod.css';
 
 :root {
   --height-input: 32px;
+  --currency-min-width: 24px;
+  --chevron-width: 12px;
+  --options-top-position: 30px;
+}
+
+.fieldContainer {
+  width: 100%;
+  position: relative;
+  display: flex;
 }
 
 .input {
   width: 100%;
   height: var(--height-input);
-  border-radius: var(--border-radius-6);
+  border-top-right-radius: var(--border-radius-6);
+  border-bottom-right-radius: var(--border-radius-6);
   border-style: solid;
-  border-width: 1px;
+  border-width: var(--border-radius-1);
   padding: 0 var(--spacing-8);
   transition: var(--transition-standard);
   outline: none;
@@ -58,4 +70,116 @@
 .pristine:focus {
   border-color: var(--color-greenDowny);
   color: var(--color-black);
+}
+
+/* Currency dropdown */
+.currency-dropdown-container {
+  border-top-left-radius: var(--border-radius-6);
+  border-bottom-left-radius: var(--border-radius-6);
+  border: var(--border-radius-1) solid var(--color-greySolid);
+  border-right-color: var(--color-white);
+  position: relative;
+}
+
+.disabled-currency-dropdown-container {
+  background-color: var(--color-whiteCatskill);
+  border-color: var(--color-greyMischka);
+  color: var(--color-greyNevada);
+}
+
+.currency-disabled {
+  color: var(--color-greyNevada);
+  background-color: var(--color-whiteCatskill);
+}
+
+.currency-disabled svg {
+  fill: var(--color-greyAlto);
+}
+
+.currency-warning {
+  color: var(--color-orange);
+  border-color: var(--color-orange);
+}
+
+.currency-warning svg {
+  fill: var(--color-orange);
+}
+
+.currency-error {
+  color: var(--color-red);
+  border-color: var(--color-red);
+}
+
+.currency-error svg {
+  fill: var(--color-red);
+}
+
+.currency-dropdown-open-container {
+  border-bottom-left-radius: 0;
+}
+
+.selected-option-wrapper {
+  display: flex;
+  align-items: center;
+
+  /* this is to center the selected value */
+  margin-top: 3px;
+}
+
+.selected-option {
+  display: flex;
+  align-items: center;
+  padding: 0 var(--spacing-8);
+  height: var(--small-button-height);
+
+  /* this is to mantain dimensions after selecting an option over empty value */
+  min-width: var(--currency-min-width);
+}
+
+.chevron-icon {
+  display: flex;
+  align-items: center;
+  padding: 0 var(--spacing-4);
+  height: var(--small-button-height);
+}
+
+.iconWrapper {
+  pointer-events: none;
+  width: var(--chevron-width);
+
+  /* This is to center the icon as the caret visually looks too high otherwise */
+  margin-top: 3px;
+}
+
+.options-wrapper {
+  position: absolute;
+  z-index: 5;
+  top: var(--options-top-position);
+  border: 1px solid var(--color-greySolid);
+  border-radius: var(--border-radius-6);
+  border-top-color: var(--color-primaryGrey);
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+
+  /* to fit width + borders */
+  width: calc(100% + 2px);
+
+  /* to center the options under the header */
+  left: -1px;
+}
+
+.option-wrapper {
+  display: block;
+  text-align: left;
+  width: 100%;
+  padding: var(--spacing-8);
+  background-color: var(--color-white);
+}
+
+.option-wrapper:last-child {
+  border-radius: 0 0 var(--border-radius-6) var(--border-radius-6);
+}
+
+.option-wrapper:hover {
+  background-color: var(--color-whiteSnow);
 }
