fix(discounts): limiting discount's names inputs width

--- a/table/table.mod.css
+++ b/table/table.mod.css
@@ -1,5 +1,9 @@
 @import '../materials/colors.mod.css';
 
+:root {
+  --default-table-cell-width: 300px;
+}
+
 /* Structure */
 
 .autosized-container {
@@ -32,4 +36,10 @@
 .checkbox-cell-special {
   composes: checkbox-cell;
   border-left: 2px solid red;
+}
+
+.cell-wrapper {
+  display: inline-block;
+  max-width: var(--default-table-cell-width);
+  white-space: initial;
 }
